maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:26: error: value nil is not a member of object List
    var next:List[Int] = List.nil
                              ^ShortestPathMaze:47: error: value nil is not a member of object List
  var nextCase:List[Int]=List.nil
                              ^ShortestPathMaze:51: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: Int
    for ((a,b) <- nextCase) {
         ^ShortestPathMaze:52: error: type mismatch;
 found   : Any
 required: Int
      setIndication(a,b,i)
                    ^ShortestPathMaze:52: error: type mismatch;
 found   : Any
 required: Int
      setIndication(a,b,i)
                      ^